# procamv2

./: .gitignore  ACTION_PLAN.md  CMakeLists.txt  CODE_ANALYSIS_REPORT.md  DETAILED_FIXES.md  QUICK_FIXES.md  README.md  README_ANALYSIS.md  SETUP_GUIDE_DE.md  changelog.md
.claude/: settings.local.json
UI/: CMakeLists.txt  filelist.txt  project.info  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
UI/components/: ui_comp_hook.c
UI/fonts/: ui_font_Font1.c  ui_font_Font10.c  ui_font_Font11.c  ui_font_Font12.c  ui_font_Font2.c  ui_font_Font3.c  ui_font_Font4.c  ui_font_Font5.c  ui_font_Font6.c  ui_font_Font7.c  ui_font_Font8.c  ui_font_Font9.c
UI/screens/: ui_Gallery1.c  ui_Gallery1.h  ui_main.c  ui_main.h  ui_settings1.c  ui_settings1.h
include/camera/: camera_pipeline.h  photo_capture.h
include/core/: config.h  constants.h  hardware_health.h  lv_conf.h
include/drivers/: drm_display.h  gpio_driver.h  i2c_sensors.h  touch_input.h
include/gallery/: photo_manager.h
include/power/: power_manager.h
include/ui/: camera_scene.h  gallery_scene.h  lvgl_driver.h  scene_manager.h  settings_scene.h
scripts/: cinepi_app.service  recovery.sh  setup_autostart.sh  setup_production.sh
src/: main.cpp
src/camera/: camera_pipeline.cpp  photo_capture.cpp
src/core/: config.cpp  hardware_health.cpp
src/drivers/: drm_display.cpp  gpio_driver.cpp  i2c_sensors.cpp  touch_input.cpp
src/gallery/: photo_manager.cpp
src/power/: power_manager.cpp
src/ui/: camera_scene.cpp  gallery_scene.cpp  lvgl_driver.cpp  scene_manager.cpp  settings_scene.cpp
